<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!--Name section-->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_section"
            android:textColor="#ff157dff"
            android:textSize="20sp" />

       <!-- <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ff157dff" />-->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="8dp" >

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:hint="@string/firstname" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/lastname" />
        </LinearLayout>

        <!--Gender section-->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex_section"
            android:textColor="#ff157dff" android:textSize="20sp" />

        <!--<View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ff157dff" />-->

        <RadioGroup
            android:id="@+id/rgSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="8dp" >

            <RadioButton
                android:id="@+id/rbMale"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

        <!--DOB section-->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dob_section"
            android:textColor="#ff157dff" android:textSize="20sp" />

       <!-- <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ff157dff" />-->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="8dp" >

            <EditText
                android:id="@+id/editTextDOB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="date"
                android:hint="@string/dateformat" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showDatePickerDialog"
                android:text="@string/pick_date" />
        </LinearLayout>

        <!--Contact Info section-->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_section"
            android:textColor="#ff157dff" android:textSize="20sp" />

        <!--<View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ff157dff" />-->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp" >

            <Spinner
                android:id="@+id/phone_opt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_phone_number"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/email_opt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/enter_email_address"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <!--Address section-->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_section"
            android:textColor="#ff157dff" android:textSize="20sp" />

       <!-- <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#ff157dff" />-->

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:minLines="3"
            android:layout_height="wrap_content" />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="sendInfo"
            android:text="@string/send" />
    </LinearLayout>

</ScrollView>